src/test/ui/issues/issue-51874.stderr
error[E0689]: can't call method `pow` on ambiguous numeric type `{float}`
  --> $DIR/issue-51874.rs:2:19
   |
LL |     let a = (1.0).pow(1.0);
   |                   ^^^
help: you must specify a concrete type for this numeric value, like `f32`
   |
LL |     let a = (1.0_f32).pow(1.0);
   |              ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0689`.
